src/test/deca/etapeB/invalid/binary_op_bool/inequality_float_bool.deca
// Description:
//    Egalité entre bool et float
//
// Resultats:
//    Mauvais opérateurs pour l'égalité
// 
// Historique:
//    cree le 01/01/2016

{
    float a = 5.2;
    boolean d = true;

    if(a != d) {};
}
